--- a/style.css
+++ b/style.css
@@ -8,3 +8,8 @@ body {
   font-family: "Roboto", sans-serif;
   line-height: 1.5;
 }
+
+header {
+  background-color: #1f2937;
+  padding: 1rem 15%;
+}
