--- a/style.css
+++ b/style.css
@@ -19,3 +19,9 @@ nav {
   justify-content: space-between;
   align-items: center;
 }
+
+.logo {
+  color: #f9faf8;
+  font-size: 24px;
+  font-weight: bold;
+}
