--- a/style.css
+++ b/style.css
@@ -77,3 +77,10 @@ nav {
   padding: 5rem 15%;
   text-align: center;
 }
+
+.info h2 {
+  font-size: 36px;
+  font-weight: 900;
+  color: #1f2937;
+  margin-bottom: 3rem;
+}
