--- a/style.css
+++ b/style.css
@@ -94,3 +94,11 @@ nav {
 .card {
   max-width: 200px;
 }
+
+.box {
+  border: 4px solid #3882f6;
+  border-radius: 8px;
+  height: 200px;
+  width: 200px;
+  margin-bottom: 1rem;
+}
