--- a/style.css
+++ b/style.css
@@ -153,3 +153,14 @@ nav {
 .cta-content p {
   color: #e5e7eb;
 }
+
+.sign-up {
+  background-color: #3882f6;
+  color: white;
+  border: none;
+  padding: 0.5rem 2rem;
+  border-radius: 8px;
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer;
+}
